syntax = "proto3";

option go_package = "shared/gen/protobuf";

import "google/protobuf/empty.proto";

service BookService {
    rpc CreateBook (CreateBookRequest) returns (google.protobuf.Empty);
    rpc GetBookList (GetBookListRequest) returns (GetBookListResponse);
}

message CreateBookRequest {
    string title = 1;
    string author = 2;
    string description = 3;
}

message PaginationRequest {
    int32 page_id = 1;
    int32 page_size = 2;
}

message GetBookListRequest {
    string id = 1;
    PaginationRequest pagination = 2;
}

message Book {
    string id = 1;
    string title = 2;
    string author = 3;
    string description = 4;
    string created_at = 5;
    string updated_at = 6;
}

message PaginationResponse {
    int32 page_id = 1;
    int32 page_size = 2;
    int32 last_page = 3;
    int32 total_elements = 4;
}

message GetBookListResponse {
    repeated Book books = 1;
    PaginationResponse pagination = 2;
}



